Added gallery page
added gallery page and the first 5 images

--- a/about.html
+++ b/about.html
@@ -26,19 +26,19 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Characters</a>
+            <a class="nav-link" href="characters.html">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Goals</a>
+            <a class="nav-link" href="goals.html">Goals</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Shop</a>
+            <a class="nav-link" href="shop.html">Shop</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
@@ -75,7 +75,7 @@
 
       <div class="row ">
         <div class="col-lg-4">
-          <img class="img-fluid mb-4 ds" src="img/devicatloveemote.png" alt="">
+          <img class="img-fluid mb-4" src="img/devicatheartemote.png" alt="">
         </div>
         <div class="col-lg-8">
           <h2 class="text-center">About DeviCat</h2>
