--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Characters</a>
+            <a class="nav-link" href="characters.html">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Goals</a>
+            <a class="nav-link" href="goals.html">Goals</a>
           </li>
           <li class="nav-item">  
-            <a class="nav-link" href="#">Shop</a>
+            <a class="nav-link" href="shop.html">Shop</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -62,7 +62,7 @@
             <div class="card-body">
               <h4 class="card-title">Gallery</h4>
               <P class="card-text">click here to view all of my illustrations!</P>
-              <a href="#" class="btn btn-primary">Click Here</a>
+              <a href="gallery.html" class="btn btn-primary">Click Here</a>
             </div>
           </div>
         </div>
