--- a/gallery.html
+++ b/gallery.html
@@ -25,22 +25,22 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="gallery">Gallery<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="characters.html">Characters</a>
+            <a class="nav-link" href="characters">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="goals.html">Goals</a>
+            <a class="nav-link" href="goals">Goals</a>
           </li>
           <li class="nav-item">  
-            <a class="nav-link" href="shop.html">Shop</a>
+            <a class="nav-link" href="shop">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about">About</a>
           </li>
         </ul>
       </div>
