--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="characters.html">Characters</a>
+            <a class="nav-link" href="characters">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="goals.html">Goals</a>
+            <a class="nav-link" href="goals">Goals</a>
           </li>
           <li class="nav-item">  
-            <a class="nav-link" href="shop.html">Shop</a>
+            <a class="nav-link" href="shop">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about">About</a>
           </li>
         </ul>
       </div>
@@ -62,7 +62,7 @@
             <div class="card-body">
               <h4 class="card-title">Gallery</h4>
               <P class="card-text">click here to view all of my illustrations!</P>
-              <a href="gallery.html" class="btn btn-primary">Click Here</a>
+              <a href="gallery" class="btn btn-primary">Click Here</a>
             </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
             <div class="card-body">
               <h4 class="card-title">About</h4>
               <P class="card-text">Learn about Devicat</P>
-              <a href="about.html" class="btn btn-primary">Click Here</a>
+              <a href="about" class="btn btn-primary">Click Here</a>
             </div>
           </div>
         </div>
