Replace stub links with actual destinations

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ds">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
           <img src="img/mainbanner.png" alt="DeviCat">
       </a>
 
