--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ds">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
           <img src="img/mainbanner.png" alt="DeviCat">
       </a>
 
@@ -72,7 +72,7 @@
             <div class="card-body">
               <h4 class="card-title">Characters</h4>
               <P class="card-text">Learn about all of my original characters</P>
-              <a href="#" class="btn btn-primary">Click Here</a>
+              <a href="characters" class="btn btn-primary">Click Here</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="card-body">
               <h4 class="card-title">Goals</h4>
               <P class="card-text"> View a list of my goals and milestones</P>
-              <a href="#" class="btn btn-primary">Click Here</a>
+              <a href="goals" class="btn btn-primary">Click Here</a>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="card-body">
               <h4 class="card-title">Shop</h4>
               <P class="card-text">Want to buy some awesome DeviCat loot?</P>
-              <a href="#" class="btn btn-primary">Click Here</a>
+              <a href="https://www.redbubble.com/people/devicatoutlet/shop/" class="btn btn-primary">Click Here</a>
             </div>
           </div>
         </div>
