Oops - fix the other shop links

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="goals">Goals</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="shop">Shop</a>
+            <a class="nav-link" href="https://www.redbubble.com/people/devicatoutlet/shop/">Shop</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="about">About<span class="sr-only">(current)</span></a>
