--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="goals">Goals</a>
           </li>
           <li class="nav-item">  
-            <a class="nav-link" href="shop">Shop</a>
+            <a class="nav-link" href="https://www.redbubble.com/people/devicatoutlet/shop/">Shop</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about">About</a>
