--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                 <strong>Streaming on Twitch since:</strong> May 28, 2015
               </ul>   
             <ul>
-                <strong>Partnered on Twitch since:</strong> Rachelle (Most people call me by Devi)
+                <strong>Partnered on Twitch since:</strong> July 5, 2016
               </ul>   
             <ul>
                 <strong>Role:</strong> Artist / Speaker / Community Leader
