Add dropdown to Characters Nav
for quick navigation

--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
           <li class="nav-item">
             <a class="nav-link" href="gallery">Gallery</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="characters">Characters</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="characters" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Characters
+            <!--   <a class="nav-link" href="characters">Characters -->
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="momoko">momoko</a>
+                <a class="dropdown-item" href="shizuko">shizuko</a>
+                <a class="dropdown-item" href="reiko">reiko</a>
+                <a class="dropdown-item" href="rin">rin</a>
+                <a class="dropdown-item" href="dappercat">dappercat</a>
+                <a class="dropdown-item" href="catcupcakes">catcupcakes</a>
+              </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="goals">Goals</a>
