Create the art tips page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="gallery">Gallery</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="arttips">Art Tips</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="characters" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Characters
             <!--   <a class="nav-link" href="characters">Characters -->
