--- a/index.html
+++ b/index.html
@@ -58,10 +58,21 @@
     </nav>
 
     <!-- Jumbotron -->
-    <section class="jumbotron text-center parallax">
-              <div id="twitch-embed">
+    <section class="jumbotron parallax">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 text-left">
+            <div id="twitch-embed">
+            </div>
+          </div>
+          <div class="col-sm-4 text-right">
+                <a href="https://www.patreon.com/devicatoutlet"> <img src="img/patreon.png" alt=""></a>
+                <a href="https://discord.gg/devicat"> <img src="img/discord.png" alt=""></a>
+          </div>
+        </div>
+      </div>          
 
-              </div>
+              
     </section>
 
   <div>
@@ -177,8 +188,8 @@
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
     <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
-        width: 1280,
-        height: 720,
+        width: 768,
+        height: 432,
         channel: "devicat",
         layout: "video",
       });
