Added Gratitude Board link to Index

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <li class="nav-item">  
             <a class="nav-link" href="https://www.redbubble.com/people/devicatoutlet/shop/">Shop</a>
           </li>
+          <li class="nav-item">  
+            <a class="nav-link" href="gratitudeboard">Gratitude Board</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="about">About</a>
           </li>
