Add DeviCat Profile Image to Index
Add aboutdevicat.png to index for "About - Learn about Devicat."

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="col-sm-4">
           <div class="card">
-          <img class="card-img-top" src="img/aboutdevi.png" alt="placeholder">
+          <img class="card-img-top" src="img/aboutdevicat.png" alt="placeholder">
             <div class="card-body">
               <h4 class="card-title">About</h4>
               <P class="card-text">Learn about Devicat</P>
