--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
 
-<ul>
+<ul class="cards layout">
 	{% for post in site.posts %}
 	<li>
 		<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
