--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,10 @@ title: Blog
 <ul class="cards layout">
 	{% for post in site.posts %}
 	<li>
-		<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-		{{ post.excerpt }}
+		<a href="{{ post.url }}" class="card-link">
+			<h2>{{ post.title }}</h2>
+			{{ post.excerpt }}
+		</a>
 	</li>
 	{% endfor %}
 </ul>
